--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,8 @@
 name = bayesian-target
 version = attr: bayesian_target.__version__
 description = attr: bayesian_target.__description__
-#long_description = file: README.md
+long_description = file: README.md
+long_description_content_type = text/markdown
 python_requires = 
     >=3.8
 license = MIT license
@@ -18,7 +19,6 @@ zip_safe = False
 include_package_data = True
 packages = find:
 install_requires = 
-    pandas>=1.0.0,<=1.3.4
     scikit-learn>=1.0.0,<=1.0.1
 
 [options.extras_require]
