Using masked arrays for parallelization (#1)
* Using masked arrays to speed up (hopefully) code execution

* Adding support for multinomial distribution

* Code formatting

* pip-tools and pydocstyle

* Adding some QA things

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,16 +1,23 @@
 [metadata]
 name = bayesian-target
 version = attr: bayesian_target.__version__
-description = attr: bayesian_target.__description__
-#long_description = file: README.md
+description = Bayesian target encoding with scikit-learn and scipy
+license = MIT license
+long_description = file: README.md
+long_description_content_type = text/markdown
+author = Akshay Gupta
+author_email = akgcodes@gmail.com
+url = https://github.com/ak-gupta/bayesian-target
 python_requires = 
-    >=3.8
+    >=3.7
 license = MIT license
 classifiers = 
     Development Status :: 2 - Pre-Alpha
     License :: OSI Approved :: MIT License
     Natural Language :: English
     Programming Language :: Python :: 3
+    Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
 
 [options]
@@ -18,10 +25,14 @@ zip_safe = False
 include_package_data = True
 packages = find:
 install_requires = 
-    pandas>=1.0.0,<=1.3.4
     scikit-learn>=1.0.0,<=1.0.1
 
 [options.extras_require]
+build =
+    build
+    bumpver
+    twine
+    wheel
 docs = 
     furo
     myst-nb
@@ -31,6 +42,7 @@ qa =
     flake8
     mypy
     pip-tools
+    pydocstyle
 tests =
     pytest
     pytest-cov
@@ -38,6 +50,16 @@ dev =
     %(docs)s
     %(qa)s
     %(tests)s
+
+[bumpver]
+current_version = "0.1.0"
+version_pattern = "MAJOR.MINOR.PATCH"
+
+[bumpver:file_patterns]
+setup.cfg = 
+    current_version = "{version}"
+bayesian_target/__init__.py = 
+    __version__ = "{version}"
 
 [flake8]
 max-line-length = 100
