I think this works?

--- a/setup.cfg
+++ b/setup.cfg
@@ -58,7 +58,7 @@ version_pattern = "MAJOR.MINOR.PATCH"
 [bumpver:file_patterns]
 setup.cfg = 
     current_version = "{version}"
-bayesian_target/__init__.py = 
+bayesian_target/_meta.py = 
     __version__ = "{version}"
 
 [flake8]
