Forgot to change version reference

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = bayesian-target
-version = attr: bayesian_target.__version__
+version = attr: bayesian_target._meta.__version__
 description = Bayesian target encoding with scikit-learn and scipy
 long_description = file: README.md
 long_description_content_type = text/markdown
