--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,7 @@ zip_safe = False
 include_package_data = True
 packages = find:
 install_requires = 
+    pandas>=1.0.0,<=1.3.4
     scikit-learn>=1.0.0,<=1.0.1
 
 [options.extras_require]
