--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -37,7 +37,7 @@ jobs:
             - name: Run unit testing
               run: python -m pytest tests --cov=./ --cov-report=xml
             - name: Run Codecov
-              if: ${{ matrix.python-version == '3.8' }}
+              if: ${{ matrix.python-version == 3.8 }}
               uses: codecov/codecov-action@v2
               with:
                 fail_ci_if_error: true
