--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -20,6 +20,7 @@ jobs:
                 python_version:
                     - 3.7
                     - 3.8
+                    - 3.9
         steps:
             - uses: actions/checkout@v2
             - name: Set up Python ${{ matrix.python-version }}
@@ -37,7 +38,7 @@ jobs:
             - name: Run unit testing
               run: python -m pytest tests --cov=./ --cov-report=xml
             - name: Run Codecov
-              if: ${{ matrix.python-version == 3.8 }}
+              if: ${{ matrix.python-version }} == '3.8'
               uses: codecov/codecov-action@v2
               with:
                 fail_ci_if_error: true
