Really basic start at building documentation

--- a/setup.cfg
+++ b/setup.cfg
@@ -62,6 +62,8 @@ setup.cfg =
     current_version = "{version}"
 bayte/_meta.py = 
     __version__ = "{version}"
+docs/conf.py = 
+    version = "{version}"
 
 [flake8]
 max-line-length = 100
