--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,8 @@ docs =
     sphinx
     sphinxcontrib-bibtex
     sphinx-tabs
+experiments =
+    category_encoders==2.3.0
 qa =
     black
     flake8
