--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,10 @@ docs =
     furo
     myst-nb
     sphinx
+    sphinxcontrib-bibtex
+    sphinx-tabs
+experiments =
+    category_encoders==2.3.0
 qa =
     black
     flake8
@@ -62,6 +66,8 @@ setup.cfg =
     current_version = "{version}"
 bayte/_meta.py = 
     __version__ = "{version}"
+docs/conf.py = 
+    version = "{version}"
 
 [flake8]
 max-line-length = 100
