Realized that the make_regression function is not working very well. Also added a function for visualizing the target distribution and added normal dist support

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,8 @@ docs =
     sphinx-tabs
 experiments =
     category_encoders==2.3.0
+plots =
+    seaborn>=0.11.0,<=0.11.2
 qa =
     black
     flake8
@@ -51,8 +53,12 @@ qa =
 tests =
     pytest
     pytest-cov
+complete =
+    %(experiments)s
+    %(plots)s
 dev =
     %(build)s
+    %(complete)s
     %(docs)s
     %(qa)s
     %(tests)s
