--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,7 @@ docs =
     sphinx-tabs
 experiments =
     category_encoders==2.3.0
+    prefect==0.15.10
 plots =
     seaborn>=0.11.0,<=0.11.2
 qa =
@@ -62,6 +63,14 @@ dev =
     %(docs)s
     %(qa)s
     %(tests)s
+
+
+[options.packages.find]
+exclude =
+    experiments
+    experiments.*
+    tests
+    tests.*
 
 [bumpver]
 current_version = "0.1.0"
