--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ pip-log.txt
 pip-delete-this-directory.txt
 
 # Experiments
+experiments/data/*/*.arff
 experiments/data/*/*.csv
 
 # Unit test / coverage reports
