Starting to build model pipeline

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,7 +42,9 @@ docs =
     sphinx-tabs
 experiments =
     category_encoders==2.3.0
+    %(plots)s
     prefect==0.15.10
+    rubicon-ml==0.2.11
 plots =
     seaborn>=0.11.0,<=0.11.2
 qa =
