--- a/setup.cfg
+++ b/setup.cfg
@@ -42,9 +42,11 @@ docs =
     sphinx-tabs
 experiments =
     category_encoders==2.3.0
+    lightgbm==3.3.1
     %(plots)s
     prefect==0.15.10
     rubicon-ml==0.2.11
+    xgboost==1.5.1
 plots =
     seaborn>=0.11.0,<=0.11.2
 qa =
