Adding support for the normal distribution as well as a bunch of experiments (#5)
* Adding support for normal distribution -- with assumed static variance

* Updating documentation

* Realized that the make_regression function is not working very well. Also added a function for visualizing the target distribution and added normal dist support

* Parallel fit test and adding tests for plotting

* QA

* Updating gitignore

* Default palette and tight layout

* Creating initial metadata files -- untested

* Starting to build up experimentation framework, starting with target distribution viz

* Updating the plotting module and metadata to help make plots more usable

* Getting rid of datasets that are hard to read in

* Starting to build model pipeline

* Not quite fully there but almost ready for base performance experiments

* Running black

* Continuing to make progress -- need to handle binary columns

* Fixing some of the metadata

* Updating requirements and adding some pages to show distribution of target

* Updating the base performance flow and dataset pages

* Adding a basic task for parsing rubicon experiment data

* Removing an experimental question -- not answering since generating synthetic regression data is hard

* Creating flows for evaluating number of samples

* Adding a task for parsing sampling performance

* Creating a minimal CLI to help run experiments

* Changing experiment -- 0 estimators means no sampling

* Small updates -- 10-fold cross-validation and sampling performance visualizations

* Adding seeding for sampling to produce reliable results

* Figuring out random state stuff

* Running more experiments

* Tons of updates

* Completing more experiments

* Click dataset experimentation

* Comparison experiment

* Using quartile for the plots

* Fixing QA issue

* Updating version and pointing path for coverage report

* Reverting version change since we haven't done a r

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,13 @@ wheels/
 pip-log.txt
 pip-delete-this-directory.txt
 
+# Experiments
+experiments/data/*/*.arff
+experiments/data/*/*.csv
+experiments/output/base-performance/*
+experiments/output/categorical-encoders/*
+experiments/output/number-of-samples/*
+
 # Unit test / coverage reports
 htmlcov/
 .tox/
