--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,13 @@ docs =
     sphinx-tabs
 experiments =
     category_encoders==2.3.0
+    lazyscribe==0.3.0
+    lightgbm==3.3.1
+    %(plots)s
+    prefect==0.15.10
+    xgboost==1.5.1
+plots =
+    seaborn>=0.11.0,<=0.11.2
 qa =
     black
     flake8
@@ -51,11 +58,23 @@ qa =
 tests =
     pytest
     pytest-cov
+complete =
+    %(experiments)s
+    %(plots)s
 dev =
     %(build)s
+    %(complete)s
     %(docs)s
     %(qa)s
     %(tests)s
+
+
+[options.packages.find]
+exclude =
+    experiments
+    experiments.*
+    tests
+    tests.*
 
 [bumpver]
 current_version = "0.1.0"
