--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,7 @@ experiments/output/number-of-samples/*
 # Unit test / coverage reports
 htmlcov/
 .tox/
+.edgetest/
 .coverage
 .coverage.*
 .cache
