--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,7 @@ python_requires =
     >=3.7
 license = MIT license
 classifiers = 
-    Development Status :: 2 - Pre-Alpha
+    Development Status :: 3 - Alpha
     License :: OSI Approved :: MIT License
     Natural Language :: English
     Programming Language :: Python :: 3
@@ -19,14 +19,15 @@ classifiers =
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
 
 [options]
 zip_safe = False
 include_package_data = True
 packages = find:
 install_requires = 
-    pandas>=1.0.0,<=1.3.4
-    scikit-learn>=1.0.0,<=1.0.1
+    pandas<=1.5.2,>=1.0.0
+    scikit-learn<=1.1.3,>=1.0.0
 
 [options.extras_require]
 build =
@@ -48,7 +49,7 @@ experiments =
     prefect==0.15.10
     xgboost==1.5.1
 plots =
-    seaborn>=0.11.0,<=0.11.2
+    seaborn<=0.12.1,>=0.11.0
 qa =
     black
     flake8
@@ -58,12 +59,9 @@ qa =
 tests =
     pytest
     pytest-cov
-complete =
-    %(experiments)s
-    %(plots)s
 dev =
     %(build)s
-    %(complete)s
+    %(plots)s
     %(docs)s
     %(qa)s
     %(tests)s
@@ -77,7 +75,7 @@ exclude =
     tests.*
 
 [bumpver]
-current_version = "0.1.0"
+current_version = "0.1.1"
 version_pattern = "MAJOR.MINOR.PATCH"
 
 [bumpver:file_patterns]
@@ -98,3 +96,15 @@ warn_return_any = True
 warn_unused_configs = True
 ignore_missing_imports = True
 allow_redefinition = True
+
+[edgetest.envs.core]
+python_version = 3.9
+extras = 
+    plots
+	tests
+command = 
+	pytest tests
+upgrade = 
+	pandas
+	scikit-learn
+    seaborn
