--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -39,8 +39,9 @@ jobs:
             - name: Run unit testing
               run: python -m pytest tests --cov=./bayte --cov-report=xml
             - name: Run Codecov
-              uses: codecov/codecov-action@v2
+              uses: codecov/codecov-action@v3
               with:
+                token: ${{ secrets.CODECOV_TOKEN }}
                 fail_ci_if_error: true
                 files: ./coverage.xml
                 verbose: true
