--- a/setup.cfg
+++ b/setup.cfg
@@ -8,26 +8,26 @@ author = Akshay Gupta
 author_email = akgcodes@gmail.com
 url = https://github.com/ak-gupta/bayte
 python_requires = 
-	>=3.7
-license = MIT license
+	>=3.8
+license = { file = "LICENSE" }
 classifiers = 
 	Development Status :: 3 - Alpha
 	License :: OSI Approved :: MIT License
 	Natural Language :: English
 	Programming Language :: Python :: 3
 	Programming Language :: Python :: 3 :: Only
-	Programming Language :: Python :: 3.7
 	Programming Language :: Python :: 3.8
 	Programming Language :: Python :: 3.9
 	Programming Language :: Python :: 3.10
+	Programming Language :: Python :: 3.11
 
 [options]
 zip_safe = False
 include_package_data = True
 packages = find:
 install_requires = 
-	pandas<=1.5.3,>=1.0.0
-	scikit-learn<=1.2.1,>=1.0.0
+	pandas<=2.2.2,>=1.0.0
+	scikit-learn<=1.4.2,>=1.0.0
 
 [options.extras_require]
 build = 
@@ -45,11 +45,11 @@ experiments =
 	category_encoders==2.3.0
 	lazyscribe==0.3.0
 	lightgbm==3.3.1
-	seaborn<=0.12.1,>=0.11.0
+	seaborn<=0.13.2,>=0.11.0
 	prefect==0.15.10
 	xgboost==1.5.1
 plots = 
-	seaborn<=0.12.2,>=0.11.0
+	seaborn<=0.13.2,>=0.11.0
 qa = 
 	black
 	flake8
@@ -64,7 +64,7 @@ dev =
 	bumpver
 	twine
 	wheel
-	seaborn<=0.12.1,>=0.11.0
+	seaborn<=0.13.2,>=0.11.0
 	furo
 	myst-nb
 	sphinx
