--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -24,20 +24,27 @@ jobs:
                     - '3.11'
         steps:
             - uses: actions/checkout@v2
+
             - name: Set up Python ${{ matrix.python-version }}
               uses: actions/setup-python@v2
               with:
                 python-version: ${{ matrix.python-version }}
+
             - name: Install dependencies
               run: python -m pip install -r requirements.txt .[dev]
-            - name: Check docstrings
-              run: python -m pydocstyle bayte --convention=numpy
+
+            - name: Run ruff QA checks
+              run: python -m ruff check .
+
+            - name: Check formatting
+              run: python -m ruff format . --check
+
             - name: Check static typing
               run: python -m mypy bayte
-            - name: Run flake8
-              run: python -m flake8 bayte
+
             - name: Run unit testing
               run: python -m pytest tests --cov=./bayte --cov-report=xml
+
             - name: Run Codecov
               uses: codecov/codecov-action@v3
               with:
