--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -30,6 +30,9 @@ jobs:
               with:
                 python-version: ${{ matrix.python-version }}
 
+            - name: Install setuptools and upgrade pip
+              run: python -m pip install 'setuptools>=64.0.0' 'pip>=22.3'
+
             - name: Install dependencies
               run: python -m pip install -r requirements.txt .[dev]
 
