--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -34,7 +34,7 @@ jobs:
               run: python -m pip install 'setuptools>=64.0.0' 'pip>=22.3'
 
             - name: Install dependencies
-              run: python -m pip install -r requirements.txt .[dev]
+              run: python -m pip install -r requirements.txt .[plots,tests,qa]
 
             - name: Run ruff QA checks
               run: python -m ruff check .
