--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,7 +93,7 @@ readme = { file = ["README.md"], content-type = "text/markdown" }
 # BUMPVER --------------------------------------------------------------------
 
 [bumpver]
-current_version = "0.2.0"
+current_version = "0.2.1"
 version_pattern = "MAJOR.MINOR.PATCH"
 
 [bumpver.file_patterns]
@@ -101,7 +101,7 @@ version_pattern = "MAJOR.MINOR.PATCH"
     'current_version = "{version}"',
 ]
 "bayte/_meta.py" = [
-    '__version___ = "{version}"',
+    '__version__ = "{version}"',
 ]
 "docs/conf.py" = [
     'version = "{version}"',
