--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,47 +22,13 @@ dependencies = ["pandas<=2.2.2,>=1.0.0", "scikit-learn<=1.4.2,>=1.0.0"]
 dynamic = ["readme", "version"]
 
 [project.optional-dependencies]
-build = [
-	"build",
-	"bumpver",
-	"twine",
-	"wheel",
-]
-docs = [
-	"furo",
-	"myst-nb",
-	"sphinx",
-	"sphinxcontrib-bibtex",
-	"sphinx-tabs",
-]
-experiments = [
-	"category_encoders==2.3.0",
-	"lazyscribe==0.3.0",
-	"lightgbm==3.3.1",
-	"seaborn<=0.13.2,>=0.11.0",
-	"prefect==0.15.10",
-	"xgboost==1.5.1",
-]
-plots = [
-	"seaborn<=0.13.2,>=0.11.0"
-]
-qa = [
-    "ruff==0.3.7",
-	"mypy",
-	"pip-tools",
-]
-tests = [
-	"pytest",
-	"pytest-cov",
-]
-dev = [
-    "bayte[build]",
-    "bayte[docs]",
-    "bayte[experiments]",
-    "bayte[plots]",
-    "bayte[qa]",
-    "bayte[tests]",
-]
+build = ["build", "bumpver", "twine", "wheel"]
+docs = ["furo", "myst-nb", "sphinx", "sphinxcontrib-bibtex", "sphinx-tabs"]
+experiments = ["category_encoders==2.3.0", "lazyscribe==0.3.0", "lightgbm==3.3.1", "seaborn<=0.13.2,>=0.11.0", "prefect==0.15.10", "xgboost==1.5.1"]
+plots = ["seaborn<=0.13.2,>=0.11.0"]
+qa = ["ruff==0.3.7", "mypy", "pip-tools"]
+tests = ["pytest", "pytest-cov"]
+dev = ["bayte[build]", "bayte[docs]", "bayte[experiments]", "bayte[plots]", "bayte[qa]", "bayte[tests]"]
 
 [project.urls]
 documentation = "https://bayte.readthedocs.io/"
